<?xml version="1.0"?>
<package>
  <name>rosserial_leonardo_cmake</name>
  <version>0.0.0</version>
  <description>CMake scripts for building Arduino Leonardo (atmega32u4) Firmwares</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosserial_msgs</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>gcc-avr</build_depend>
  <build_depend>avr-libc</build_depend>
  <build_depend>avrdude</build_depend>
</package>
