<?xml version="1.0"?>
<package>
  <name>rosserial_leonardo_cmake</name>
  <version>0.1.1</version>
  <description>CMake scripts for building Arduino Leonardo (atmega32u4) Firmwares</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>curl</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosserial_msgs</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>tar</build_depend>
  <run_depend>gcc-avr</run_depend>
  <run_depend>avr-libc</run_depend>
  <run_depend>avrdude</run_depend>
  <run_depend>rosserial_arduino</run_depend>
</package>
